#62 Update GitDetailsServiceTest.java